Fix double borders between tabs and multiview (part of T879157)

--- a/styles/widgets/generic/tabPanel.generic.less
+++ b/styles/widgets/generic/tabPanel.generic.less
@@ -52,6 +52,10 @@
         }
 
         .dx-tabs-scrollable {
+            .dx-tabs-wrapper {
+                border-bottom: none;
+            }
+
             .dx-tab:not(.dx-tab-selected):before {
                 content: "";
                 pointer-events: none;
